# GreyGameEngine

./: .gitignore  README.md
GreyGameEngine/: CMakeLists.txt  GreyGameEngine.cpp  GreyGameEngine.h
GreyGameEngine/Entity/: Entity.hpp  Entity.tpp
GreyGameEngine/Manager/: ComponentStorage.hpp  ComponentStorage.tpp  EntityManager.hpp  EntityManager.tpp  SystemManager.hpp
GreyGameEngine/Metaprogramming/: Metaprogramming.hpp
GreyGameEngine/Utils/: MemViwer.hpp
GreyGameEngine/Utils/DataStructures/: SlotMap.h  SlotMap.tpp
